[package]
name = "sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sort"
path = "src/main.rs"

[[bin]]
name = "gen"
path = "src/gen.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
rand = "0.8.5"
rayon = "1.8.1"
