[package]
name = "sorting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sort"
path = "src/main.rs"

[[bin]]
name = "gen"
path = "src/gen.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rayon = "1.8"
